--- a/Desafios/cordel-moderno/style.css
+++ b/Desafios/cordel-moderno/style.css
@@ -1,24 +1,38 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee+Spice&family=Honk:MORF@28&family=Playwrite+CU:wght@100..400&family=Rancho&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee+Spice&family=Honk:MORF@28&family=Passion+One:wght@400;700;900&family=Playwrite+CU:wght@100..400&family=Rancho&display=swap');
+
+:root {
+    --fonte1:Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2:"Passion One", sans-serif;
+    --fonte3:"Rancho", serif;
+}
+
 * {
     margin: 0px;
-    padding: 0px;
+    padding: 0px; 
+    font-size: 1em;
 }
 
 html , body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header {
     background-color: black;
     color: white;
     text-align: center;
+    font-family: var(--fonte2);
 }
 
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-size: 4em;
 }
 
 header > p {
@@ -40,6 +54,8 @@ section {
      padding-bottom: 10vh;
      line-height: 2em;
      padding-left: 30px;
+     font-family: var(--fonte3);
+     font-size: 2.3em;
 }
 
 section.normal {
@@ -54,7 +70,8 @@ section.imagem {
 }
 
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.178);
 }
 
