--- a/Desafios/cordel-moderno/style.css
+++ b/Desafios/cordel-moderno/style.css
@@ -1,13 +1,13 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee+Spice&family=Honk:MORF@28&family=Playwrite+CU:wght@100..400&family=Rancho&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee+Spice&family=Honk:MORF@28&family=Passion+One:wght@400;700;900&family=Playwrite+CU:wght@100..400&family=Rancho&family=Shantell+Sans:ital,wght@0,300..800;1,300..800&family=Short+Stack&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bungee+Spice&family=Honk:MORF@28&family=Passion+One:wght@400;700;900&family=Playwrite+CU:wght@100..400&family=Rancho&display=swap');
 
 :root {
     --fonte1:Verdana, Geneva, Tahoma, sans-serif;
     --fonte2:"Passion One", sans-serif;
-    --fonte3:"Rancho", serif;
+    --fonte3:"Shantell Sans", cursive;
 }
 
 * {
@@ -32,7 +32,7 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
-    font-size: 4em;
+    font-size: 5em;
 }
 
 header > p {
@@ -58,6 +58,10 @@ section {
      font-size: 2.3em;
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
      background-color: white;
      color: black;      
@@ -67,12 +71,31 @@ section.normal {
 section.imagem {
     background-color: rgb(85, 83, 83);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.507);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.178);
+    background-color: rgba(0, 0, 0, 0.342);
+    text-shadow: 2px 2px 2px black;
+    
+}
+
+section#img01 {
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+    
+
+}
+
+section#img02 {
+    background-image: url(imagens/background002.jpg);
+    background-position: right center;
+    
+
 }
 
 footer {
