--- a/Exercicios/ex026/mq002/estilos/paisagem.css
+++ b/Exercicios/ex026/mq002/estilos/paisagem.css
@@ -2,7 +2,7 @@
 
 /*Aparelho deitado*/
 
-html, body{
+ body{
     background-image: url(../imagens/cev-landscape.jpg);
     background-position: left bottom;
 }
